pkg/synthesis/tests_expected_output/k8s_resources/Example1dExternalWithSegmentsFiltered_NoHint_Filtered/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
    creationTimestamp: null
    labels:
        k8s.ovn.org/primary-user-defined-network: ""
        kubernetes.io/metadata.name: seg_a_and_b
    name: seg_a_and_b
spec: {}
status: {}
