pkg/synthesis/tests_expected_output/k8s_resources/Example1dExternalWithSegmentsFiltered_NoHint_Filtered/pods.yaml
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        VMs_within_IPs__0.0.1.0-25: "true"
        group__default-group: "true"
    name: A
    namespace: default
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        VMs_within_IPs__0.0.1.128-25: "true"
        group__default-group: "true"
    name: B
    namespace: default
spec:
    containers: null
status: {}
