pkg/synthesis/tests_expected_output/k8s_resources/Example1dExternalWithSegmentsFiltered_NoHint_Filtered/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (VMs within IPs 0.0.1.0/25) dst: (VMs within IPs 0.0.1.128/25) conn: TCP dst-ports: 445'
        nsx-id: "1004"
    creationTimestamp: null
    name: policy-0
    namespace: seg_a_and_b
spec:
    egress:
        - ports:
            - port: 445
              protocol: TCP
          to:
            - podSelector:
                matchExpressions:
                    - key: VMs_within_IPs__0.0.1.128-25
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: VMs_within_IPs__0.0.1.0-25
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (VMs within IPs 0.0.1.0/25) dst: (VMs within IPs 0.0.1.128/25) conn: TCP dst-ports: 445'
        nsx-id: "1004"
    creationTimestamp: null
    name: policy-1
    namespace: seg_a_and_b
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: VMs_within_IPs__0.0.1.0-25
                      operator: Exists
          ports:
            - port: 445
              protocol: TCP
    podSelector:
        matchExpressions:
            - key: VMs_within_IPs__0.0.1.128-25
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (VMs within IPs 0.0.1.128/25) dst: (IP addr in 0.0.2.0/24) conn: TCP dst-ports: 443'
        nsx-id: "1005"
    creationTimestamp: null
    name: policy-2
    namespace: seg_a_and_b
spec:
    egress:
        - ports:
            - port: 443
              protocol: TCP
          to:
            - ipBlock:
                cidr: 0.0.2.0/24
    podSelector:
        matchExpressions:
            - key: VMs_within_IPs__0.0.1.128-25
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: Default Deny Network Policy
        nsx-id: "1003"
    creationTimestamp: null
    name: default-deny
    namespace: seg_a_and_b
spec:
    podSelector: {}
    policyTypes:
        - Ingress
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: Network Policy To Allow Access To DNS Server
        nsx-id: none
    creationTimestamp: null
    name: dns-policy
    namespace: seg_a_and_b
spec:
    egress:
        - ports:
            - port: 53
              protocol: UDP
          to:
            - namespaceSelector: {}
              podSelector:
                matchLabels:
                    k8s-app: kube-dns
    podSelector: {}
    policyTypes:
        - Egress
